# stv-rs

./: Cargo.toml  README.md
.github/workflows/: benches.yml  build.yml  codecov.yml  format.yml  integration.yml  lints.yml  mdformat.yml  semver.yml  shellcheck.yml  tests-overflow-checks.yml  tests.yml
examples/: histogram.rs  random_ballots.rs  remove_nicknames.rs  shuffle_ballots.rs
man/: help.txt  meek_help.txt  meek_short_help.txt  plurality_help.txt  short_help.txt  version.txt
src/: blt.rs  cli.rs  lib.rs  main.rs  meek.rs  parse.rs  pbv.rs  types.rs  util.rs  vote_count.rs
src/arithmetic/: approx_rational.rs  exact.rs  fixed.rs  fixed_big.rs  float64.rs  mod.rs  ratio_i64.rs
src/parallelism/: mod.rs  range.rs  thread_pool.rs
src/types/: ballot.rs  bit_packing.rs  mod.rs  util.rs
testdata/: README.md  equal_preference.blt  equal_preference_droop.blt  rand_2x10.blt  rand_hypergeometric.blt  vegetables.histogram.csv
testdata/ballots/: skewed.blt  vegetables.blt
testdata/ballots/bigint/: ballot_count_overflows.blt  ballot_sum_overflows.blt  rand_hypergeometric_many.blt
testdata/ballots/crashes/: crash.blt  minimal10.blt  rand_geometric.blt
testdata/ballots/equal_preference/: always_behind.blt  equal_preference_equalize.blt
testdata/ballots/negative_surplus/: below_quota.blt
testdata/ballots/random/: rand_2x10.blt  rand_5x4.blt  rand_hypergeometric.blt  rand_hypergeometric_10k.blt  rand_mixed_5k.blt
testdata/ballots/recursive_descent/: transfer.blt  transfer_is_blocked.blt
testdata/ballots/ties/: tie_break_explicit.blt
testdata/crashes/: elect_too_many.blt  minimal.blt  rand_geometric.blt  rand_geometric.droop.err
testdata/histogram/bigint/: ballot_count_overflows.csv  ballot_sum_overflows.csv  rand_hypergeometric_many.csv
testdata/histogram/equal_preference/: always_behind.csv  equal_preference.csv
testdata/histogram/random/: rand_2x10.csv  rand_5x4.csv  rand_hypergeometric.csv  rand_hypergeometric_100k.csv  rand_hypergeometric_10k.csv  rand_mixed_5k.csv
testdata/meek/bigint/: ballot_count_overflows.fixed9.err  ballot_sum_overflows.bigfixed9.err  ballot_sum_overflows.fixed9.custom.err  ballot_sum_overflows.fixed9.err  ballot_sum_overflows.fixed9.parallel.err  ballot_sum_overflows.fixed9.rayon.err  rand_hypergeometric_many.equalize.fixed9.err
testdata/meek/crashes/: elect_too_many.droop.err  minimal.droop.err  minimal10.droop.err
testdata/numeric/: equal_preference.blt  vegetables.keep_withdrawn.blt  vegetables.remove_withdrawn.blt
testdata/random/: rand_2x10.histogram.csv  rand_5x4.blt  rand_5x4.histogram.csv  rand_hypergeometric.histogram.csv
testdata/shuffle_ballots/: rand_10k_sorted_by_lexico_product.blt  rand_10k_sorted_by_product.blt  rand_10k_sorted_lexicographically.blt  rand_mixed_5k_sorted_alphabetically.blt  rand_sorted_by_lexico_product.blt  rand_sorted_by_product.blt  rand_sorted_lexicographically.blt
testdata/ties/: tie_break_implicit.blt
tools/: benchmark-all-before-after.sh  benchmark-all-commits.sh  benchmark-all-compare-commits.sh  benchmark-at.sh  benchmark-compare-before-after.sh  benchmark-compare-commits.sh  benchmark-max-len.sh  build-all-commits.sh  build-pgo.sh  check-inputs.sh  create-large-inputs.sh  disable-perf.sh  enable-perf.sh  generate-files.sh  perf-all-commits.sh  perf-record.sh  perf-stat-at.sh  rayon-log.sh
