[package]
name = "stv-rs"
description = "Single Transferable Vote implementation in Rust"
version = "0.1.3"
authors = ["Guillaume Endignoux <guillaumee@google.com>"]
license = "Apache-2.0"
repository = "https://github.com/gendx/stv-rs"
readme = "README.md"
categories = ["voting"]
keywords = ["voting", "election", "stv", "meek"]
exclude = ["man/*", "testdata/*", ".github/*"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
num = "0.4"
rayon = "1"
regex = "1"

[dev-dependencies]
rand = "0.8"
rand_distr = "0.4"

[features]
default = ["checked_i64"]
checked_i64 = []

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
