[package]
name = "stv-rs"
description = "Single Transferable Vote implementation in Rust"
version = "0.3.0"
authors = ["Guillaume Endignoux <guillaumee@google.com>"]
license = "Apache-2.0"
repository = "https://github.com/gendx/stv-rs"
readme = "README.md"
categories = ["voting"]
keywords = ["voting", "election", "stv", "meek"]
exclude = ["man/*", "testdata/*", "tools/*", ".github/*"]
edition = "2021"
rust-version = "1.75.0"

[dependencies]
clap = { version = "=4.4", features = ["derive"] }
env_logger = "0.10"
jemallocator = { version = "0.5", optional = true }
log = { version = "0.4", features = ["max_level_debug"] }
num = "0.4"
rayon = "1"
regex = "1.10"

# Platforms that support `libc::sched_setaffinity()`.
[target.'cfg(any(target_os = "android", target_os = "dragonfly", target_os = "freebsd", target_os = "linux"))'.dependencies]
nix = { version = "0.28", features = ["sched"] }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3.1"
rand_distr = "0.4"

[patch.crates-io]
num-bigint = { git = "https://github.com/gendx/num-bigint.git", branch = "feature-small-uint" }

[features]
default = ["jemalloc"]
checked_i64 = []
jemalloc = ["dep:jemallocator"]
log_parallelism = []

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
